--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h1>Stocks-profit-loss</h1>
     <main>
         <label for="initial-price">Initial Price
-            <input type="text" id ="initial-price" placeholder="Enter the initial price here" /> 
+            <input type="number" id ="initial-price" placeholder="Enter the initial price here" /> 
         </label>
         <label for="stocks-quantity">Quantity of Stocks
-            <input type="text" id ="stocks-quantity" placeholder="Enter the number of stocks bought" />
+            <input type="number" id ="stocks-quantity" placeholder="Enter the number of stocks bought" />
          </label>
         <label for="current-price">Current Price
-            <input type="text" id= "current-price" placeholder="Enter the current price here" /> 
+            <input type="number" id= "current-price" placeholder="Enter the current price here" /> 
         </label>
         <button id="submit-btn">Tell Me!!!</button>
 
