--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
         <div id="output-box"></div>
 
+        <footer class="footer">
+            <div class="footer-header">{code.with.Su} || Connect with me </div>
+            <ul class="social-links">
+                <a class="link" href="https://github.com/sudarshana12"> github</a>
+                <a class="link" href="https://twitter.com/SudarshanaT12">twitter</a>
+                <a class="link" href="https://www.linkedin.com/in/sudarshana-tamuly-5bb134169/">linkedin</a>
+            </ul>
+        </footer>
+
         <script src = "app.js"></script>
     </main>
 </body>
